--- a/index.ejs
+++ b/index.ejs
@@ -148,15 +148,15 @@
                         <span class="overlay"></span>
 
                         <div class="card-image">
-                            <img src="Imgs/Profiles/user.jpg" alt="" class="card-img">
+                            <img src="Imgs/Profiles/hydro.jpg" alt="" class="card-img">
                         </div>
                     </div>
 
                     <div class="card-content">
                         <h2 class="name">Hydrogen</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="description">Streamer at @FacebookGaming <Br>Gangplank/Swain main. <Br> <a href="https://fb.gg/thehydrogen" target="_blank">fb.gg/thehydrogen</a></p>
 
-                        <button class="button">Assista</button>
+                        <button onclick="window.open('https://youtu.be/uA4ZzhvU9Nk', '_blank').focus();" class="button"  target="_blank">Assista</button>
                     </div>
                 </div>
                 <div class="card swiper-slide">
@@ -164,15 +164,15 @@
                         <span class="overlay"></span>
 
                         <div class="card-image">
-                            <img src="Imgs/Profiles/user.jpg" alt="" class="card-img">
+                            <img src="Imgs/Profiles/Klaus.png" alt="" class="card-img">
                         </div>
                     </div>
 
                     <div class="card-content">
                         <h2 class="name">Klaus</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.<br></p>
+                        <p class="description">League of Legends esports player.<br>Previously bot laner for Vivo Keyd.<br><a href="https://twitch.tv/klauslol1" target="_blank">twitch.tv/klauslol1</a></p>
 
-                        <button class="button">Assista</button>
+                        <button onclick="window.open('https://www.tiktok.com/@klauslol1/video/7094374995694030086', '_blank').focus();" class="button">Assista</button>
                     </div>
                 </div>
                 <div class="card swiper-slide">
@@ -180,15 +180,15 @@
                         <span class="overlay"></span>
 
                         <div class="card-image">
-                            <img src="Imgs/Profiles/user.jpg" alt="" class="card-img">
+                            <img src="Imgs/Profiles/red.png" alt="" class="card-img">
                         </div>
                     </div>
 
                     <div class="card-content">
                         <h2 class="name">Red Canids</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="description">Time de E-Sports Brasileiro<br>Tricampeão do #CBLOL<br><a href="https://twitter.com/redcanids" target="_blank">twitter.com/redcanids</a></p>
 
-                        <button class="button">Assista</button>
+                        <button onclick="window.open('https://youtu.be/msVBtfyDFO0', '_blank').focus();" class="button">Assista</button>
                     </div>
                 </div>
                 <div class="card swiper-slide">
@@ -196,15 +196,15 @@
                         <span class="overlay"></span>
 
                         <div class="card-image">
-                            <img src="Imgs/Profiles/user.jpg" alt="" class="card-img">
+                            <img src="Imgs/Profiles/buero.jpg" alt="" class="card-img">
                         </div>
                     </div>
 
                     <div class="card-content">
                         <h2 class="name">"Buero"</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="description">Brazilian ADC, the "Kiting monster".<br>Currently Free Agent.<br><a href="https://twitch.tv/buerinho" target="_blank">twitch.tv/buerinho</a></p>
 
-                        <button class="button">Assista</button>
+                        <button onclick="window.open('https://twitter.com/burnfxbr/status/1520137817451638785', '_blank').focus();" class="button">Assista</button>
                     </div>
                 </div>
                 <div class="card swiper-slide">
@@ -212,15 +212,15 @@
                         <span class="overlay"></span>
 
                         <div class="card-image">
-                            <img src="Imgs/Profiles/user.jpg" alt="" class="card-img">
+                            <img src="Imgs/Profiles/cuts.png" alt="" class="card-img">
                         </div>
                     </div>
 
                     <div class="card-content">
                         <h2 class="name">Courtesy</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="description">Work approved by Courtesy.<br>Top #1 Yasuo world.<br><a href="https://twitter.com/courtesyas" target="_blank">twitter.com/courtesyas</a></p>
 
-                        <button class="button">Assista</button>
+                        <button onclick="window.open('https://twitter.com/risixdzn/status/1495193015408898049', '_blank').focus();" class="button">Assista</button>
                     </div>
                 </div>
                 <div class="card swiper-slide">
@@ -228,15 +228,15 @@
                         <span class="overlay"></span>
 
                         <div class="card-image">
-                            <img src="Imgs/Profiles/user.jpg" alt="" class="card-img">
+                            <img src="Imgs/Profiles/titan.png" alt="" class="card-img">
                         </div>
                     </div>
 
                     <div class="card-content">
                         <h2 class="name">Titan</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="description">Work approved by Titan, a League of Legends esports player.<br>Red Canids ADC. <a href="https://twitter.com/titannlol1" target="_blank">twitter.com/titannlol1</a></p>
 
-                        <button class="button">Assista</button>
+                        <button onclick="window.open('https://youtu.be/msVBtfyDFO0', '_blank').focus();" class="button">Assista</button>
                     </div>
                 </div>
                 <div class="card swiper-slide">
@@ -244,15 +244,15 @@
                         <span class="overlay"></span>
 
                         <div class="card-image">
-                            <img src="Imgs/Profiles/user.jpg" alt="" class="card-img">
+                            <img src="Imgs/Profiles/aegis.png" alt="" class="card-img">
                         </div>
                     </div>
 
                     <div class="card-content">
                         <h2 class="name">Aegis</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="description">Work approved by Aegis, a League of Legends esports player.<br>Red Canids JG. <a href="https://twitter.com/aegislol1" target="_blank">twitter.com/aegislol1</a></p>
 
-                        <button class="button">Assista</button>
+                        <button onclick="window.open('https://youtu.be/msVBtfyDFO0', '_blank').focus();" class="button">Assista</button>
                     </div>
                 </div>
                 <div class="card swiper-slide">
@@ -260,33 +260,17 @@
                         <span class="overlay"></span>
 
                         <div class="card-image">
-                            <img src="Imgs/Profiles/user.jpg" alt="" class="card-img">
+                            <img src="Imgs/Profiles/quindinho.png" alt="" class="card-img">
                         </div>
                     </div>
 
                     <div class="card-content">
                         <h2 class="name">Quindinho</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="description">Work approved by Quindinho.<br>Top 1 Katarina BR.<br><a href="https://www.twitch.tv/quindinho" target="_blank">twitch.tv/quindinho</a></p>
 
-                        <button class="button">Assista</button>
+                        <button onclick="window.open('https://twitter.com/risixdzn/status/1433260172076634112', '_blank').focus();" class="button">Assista</button>
                     </div>
-                </div>
-                <div class="card swiper-slide">
-                    <div class="image-content">
-                        <span class="overlay"></span>
-
-                        <div class="card-image">
-                            <img src="Imgs/Profiles/user.jpg" alt="" class="card-img">
-                        </div>
-                    </div>
-
-                    <div class="card-content">
-                        <h2 class="name">David Dell</h2>
-                        <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                        <button class="button">Saiba mais</button>
-                    </div>
-                </div>
+                </div>                
             </div>
         </div>
 
