--- a/index.ejs
+++ b/index.ejs
@@ -66,7 +66,7 @@
       <div class="max-width-home">
             <div class="conteudo-home">
                 <div class="imgconteudohome">
-                    <img class="burnhand" src="Imgs/ignite maozinha.png">
+                    <img class="burnhand" src="Imgs/minimal gradient cut.png">
                 </div>
                 <div class="textconteudohome">
                     <h1 class="titleburn">burn</h1>
